# saleor-app-rust-axum

./: .gitignore  Cargo.toml  README.md  build.rs  bun.lockb  package.json  tailwind.config.js
queries/: my_id.graphql
schemas/: saleor.graphql
src/: main.rs  saleor.rs  templating.rs
src/saleor/: apl.rs  enums.rs  queries.rs
src/saleor/apl/: file.rs
templates/layouts/: base.html
templates/pages/: hello.html
