[package]
name = "saleor-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
askama = "0.12.1"
async-trait = "0.1.74"
axum = "0.6.20"
cynic = { version = "3.2.2", features = ["http-reqwest"] }
jsonwebtoken = "9.1.0"
reqwest = { version = "0.11.22", features = ["json"] }
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.33.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.4.4", features = ["fs"] }
tower-sessions = "0.4.1"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

[build-dependencies]
cynic-codegen = { version = "3", features = ["rkyv"] }
regex = "1.10.2"

[dev-dependencies]
insta = "1"
